# rutt

./: CLAUDE.md  Cargo.toml  README.md  config.toml.sample
.claude/: settings.json
src/: config.rs  gmail_client.rs  lib.rs  main.rs  utils.rs
src/ui/: app.rs  events.rs  mod.rs  render.rs
tests/: integration_tests.rs
