[package]
name = "rutt"
version = "0.1.0"
edition = "2024"

[dependencies]
imap = "2.4"
native-tls = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
crossterm = "0.28"
mailparse = "0.15"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
